# rustyAoC2025

./: .gitignore  Cargo.toml  meteo.py
